<resources>
    <string name="app_name">BudgetPlus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Register Login -->
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="login_email_hint"> Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? <b>Sign Up.</b></string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="forget_password_login">Forget Your Password? \u0020 </string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_confirmation_password_hint">Confirmation Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="budget">Budget</string>
    <string name="budgetplus">Budget +</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b> </string>
    <string name="send_code_again">Send Code Again</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>

    <!--Spinner For Money-->
    <string name="money_prompt">Choose a money type</string>
    <string name="create">Create</string>
    <string name="create_a_group_description_hint">Group Description</string>
    <string name="create_a_group_name">Group Name</string>
    <string name="create_a_group_title">Create A Group</string>
    <string name="add">ADD</string>
    <string name="add_expense_hint">Add Expense</string>
    <string name="add_expense_title">Add Expense</string>
    <string-array name="money_arrays">
        <item>TRY</item>
        <item>USD</item>
    </string-array>

    <string name="alertMessageCheckConnection">Internet Bağlantınızı kontrol ediniz.</string>

</resources>