<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="?android:attr/actionBarSize"
    tools:context=".view.ModalBottomSheetFragment"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLAddExpense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <TextView
            android:id="@+id/TWAddExpenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensansbolditalic"
            android:gravity="center"
            android:text="@string/add_expense_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILAddExpenseGroupNo"
            style="@style/modifiedTextInputLayout"
            app:hintTextColor="@color/bubble1ColorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TWAddExpenseTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETGroupNo"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:backgroundTint="@color/bubble1ColorDark"
                android:drawableStart="@drawable/ic_baseline_group_add_24"
                android:hint="@string/create_a_group_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILAddExpense"
            style="@style/modifiedTextInputLayout"
            android:layout_margin="15dp"
            app:hintTextColor="@color/bubble2ColorDark"
            app:layout_constraintBottom_toTopOf="@+id/BTNAddExpense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TILAddExpenseGroupNo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETAddExpense"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:backgroundTint="@color/bubble2ColorDark"
                android:drawableStart="@drawable/ic_baseline_post_add_24"
                android:hint="@string/add_expense_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BTNAddExpense"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="20dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TILAddExpense" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLCreateAGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <TextView
            android:id="@+id/TWCreateAGroupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansbolditalic"
            android:gravity="center"
            android:text="@string/create_a_group_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILCreateAGroupName"
            style="@style/modifiedTextInputLayout"
            android:layout_margin="15dp"
            app:hintTextColor="@color/bubble1ColorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TWCreateAGroupTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETGroupName"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:backgroundTint="@color/bubble1ColorDark"
                android:drawableStart="@drawable/ic_baseline_group_add_24"
                android:hint="@string/create_a_group_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILCreateAGroupDescription"
            style="@style/modifiedTextInputLayout"
            android:layout_margin="15dp"
            app:hintTextColor="@color/bubble3ColorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TILCreateAGroupName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ETCreateAGroupDescription"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:backgroundTint="@color/bubble3ColorDark"
                android:drawableStart="@drawable/ic_baseline_description_24"
                android:hint="@string/create_a_group_description_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TWCreateAGroupTitleMoneySpinnerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/money_prompt"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/opensanssemibolditalic"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TILCreateAGroupDescription" />


        <Spinner
            android:id="@+id/SPCreateAGroupMoneyChoose"
            android:layout_width="match_parent"
            android:layout_height = "?attr/dropdownListPreferredItemHeight"
            style="@style/spinner_default_style"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:entries="@array/money_arrays"
            android:prompt="@string/money_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TWCreateAGroupTitleMoneySpinnerTitle" />

        <View
            android:id="@+id/VWSeparator"
            android:background="@color/bubble2ColorDark"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical ="true"
            android:layout_alignParentTop="true"
            app:layout_constraintTop_toBottomOf="@+id/SPCreateAGroupMoneyChoose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"

            />

        <Button
            android:id="@+id/BTNCreateAGroup"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_margin="@dimen/loginViewsMargin"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VWSeparator" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>